--- a/Unity/casa0019_CourseWork/Assembly-CSharp.csproj
+++ b/Unity/casa0019_CourseWork/Assembly-CSharp.csproj
@@ -80,13 +80,14 @@
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgDisconnect.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPublish.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgConnack.cs" />
-    <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgContext.cs" />
     <Compile Include="Assets\Coursework\script\ValManager.cs" />
+    <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgContext.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Exceptions\MqttConnectionException.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgBase.cs" />
     <Compile Include="Assets\ExampleAssets\Scripts\AnchorCreator.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\WinRT\Hashtable.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPubrec.cs" />
+    <Compile Include="Assets\Coursework\script\tapToPlace.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPingReq.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgUnsubscribedEventArgs.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Internal\InternalEvent.cs" />
@@ -129,6 +130,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\Coursework\Materials\MobileARShadow.shader" />
     <None Include="Assets\MQTT\M2Mqtt\epl-v10.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
@@ -1235,6 +1237,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="LeanCommon.csproj" />
+    <ProjectReference Include="CW.Common.csproj" />
   </ItemGroup>
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
