--- a/Unity/casa0019_CourseWork/Assembly-CSharp.csproj
+++ b/Unity/casa0019_CourseWork/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgBase.cs" />
     <Compile Include="Assets\ExampleAssets\Scripts\AnchorCreator.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\WinRT\Hashtable.cs" />
+    <Compile Include="Assets\Coursework\script\test.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPubrec.cs" />
     <Compile Include="Assets\Coursework\script\ARTracker.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPingReq.cs" />
@@ -100,7 +101,6 @@
     <Compile Include="Assets\MQTT\M2Mqtt\Messages\MqttMsgPubrel.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\WinRT\Fx.cs" />
     <Compile Include="Assets\Coursework\script\mqttWeatherController.cs" />
-    <Compile Include="Assets\Coursework\script\HideCanvas.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\MqttSecurity.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\WinRT\MqttNetworkChannel.cs" />
     <Compile Include="Assets\MQTT\M2Mqtt\IMqttNetworkChannel.cs" />
